--- a/.github/workflows/test-windows-exe-pro.yml
+++ b/.github/workflows/test-windows-exe-pro.yml
@@ -78,7 +78,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" `
             --platform windows `
             --targets exe `
-            --artifact-name '{{name}}-pro-{{build_name}}.{{build_number}}-{{platform}}-setup-$env:Platform`.{{ext}}'
+            --artifact-name "{{name}}-pro-{{build_name}}.{{build_number}}-{{platform}}-setup-$env:Platform.{{ext}}"
 
       - name: Signing
         run: |
