--- a/.github/workflows/test-windows-msix-pro-arm64.yml
+++ b/.github/workflows/test-windows-msix-pro-arm64.yml
@@ -113,7 +113,7 @@ jobs:
           flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
 
       - name: Crate msix
-        run: dart run msix:create --build-windows false --output-name "picguard-pro-$env:VERSION_SHORT.$env:BUILD_NUMBER`-windows-$env:Platform"
+        run: dart run msix:create --build-windows false --output-name "picguard-pro-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform"
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
