--- a/.github/workflows/test-windows-zip-free-arm64.yml
+++ b/.github/workflows/test-windows-zip-free-arm64.yml
@@ -43,7 +43,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets zip `
-            --artifact-name '{{name}}-{{build_name}}.{{build_number}}-{{platform}}-$env:Platform`.{{ext}}'
+            --artifact-name "{{name}}-{{build_name}}.{{build_number}}-{{platform}}-$env:Platform.{{ext}}"
 
       - uses: actions/upload-artifact@v4
         with:
