--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "Your pictures, your signature." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "PicGuard" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 PicGuard. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 Insco. All Rights Reserved." "\0"
             VALUE "OriginalFilename", "PicGuard.exe" "\0"
             VALUE "ProductName", "PicGuard" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
