--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ workspace:
 
 dependencies:
   about: ^2.2.0
-  app_settings_plus: ^5.2.0+2
+  app_settings: ^6.1.1
   bot_toast: ^4.1.3
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.4.0
