ci(snaps): update workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2755,9 +2755,7 @@ jobs:
 
       - name: Remove unused files
         run: |
-          rm -f "$(pwd)/snap/gui/picguard.desktop" \
-            "$(pwd)/snap/gui/picguard.png" \
-            "$(pwd)/snap/snapcraft.yaml"
+          rm -f "$(pwd)/snap/gui/picguard.desktop" "$(pwd)/snap/gui/picguard.png"
           mv "$(pwd)/snap/snapcraft-pro.yaml" "$(pwd)/snap/snapcraft.yaml"
 
       - name: Install snapcraft
@@ -2828,9 +2826,7 @@ jobs:
 
       - name: Remove unused files
         run: |
-          rm -f "$(pwd)/snap/gui/picguard.desktop" \
-            "$(pwd)/snap/gui/picguard.png" \
-            "$(pwd)/snap/snapcraft.yaml"
+          rm -f "$(pwd)/snap/gui/picguard.desktop" "$(pwd)/snap/gui/picguard.png"
           mv "$(pwd)/snap/snapcraft-pro.yaml" "$(pwd)/snap/snapcraft.yaml"
 
       - name: Install yq
