--- a/.github/workflows/test-linux-snapcraft-pro-arm64.yml
+++ b/.github/workflows/test-linux-snapcraft-pro-arm64.yml
@@ -60,9 +60,7 @@ jobs:
 
       - name: Remove unused files
         run: |
-          rm -f "$(pwd)/snap/gui/picguard.desktop" \
-            "$(pwd)/snap/gui/picguard.png" \
-            "$(pwd)/snap/snapcraft.yaml"
+          rm -f "$(pwd)/snap/gui/picguard.desktop" "$(pwd)/snap/gui/picguard.png"
           mv "$(pwd)/snap/snapcraft-pro.yaml" "$(pwd)/snap/snapcraft.yaml"
 
       - name: Build snap
