--- a/.github/workflows/test-macos-dmg-pro.yml
+++ b/.github/workflows/test-macos-dmg-pro.yml
@@ -1,4 +1,4 @@
-name: Test macOS pkg
+name: Test macOS dmg (pro)
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ on:
 permissions: read-all
 
 jobs:
-  pkg:
-    name: Create pkg (free)
+  dmg:
+    name: Create dmg
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -43,104 +43,66 @@ jobs:
       - name: Build macOS
         run: |
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart --flavor free
+          flutter build macos --dart-define-from-file=.env --target lib/main_pro.dart --flavor pro
 
       - name: Install certificates
+        env:
+          DEVELOPER_ID_APPLICATION_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_APPLICATION_P12_BASE64_MAC }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
-          DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_installer_certificate.p12
           DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_application_certificate.p12
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
-          echo -n "$DEVELOPER_ID_INSTALLER_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH
           echo -n "$DEVELOPER_ID_APPLICATION_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # security default-keychain -s $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
           # import certificate to keychain
-          security import $DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security import $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
-          # security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        env:
-          DEVELOPER_ID_INSTALLER_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_INSTALLER_P12_BASE64_MAC }}
-          DEVELOPER_ID_APPLICATION_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_APPLICATION_P12_BASE64_MAC }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
       - name: Code Signing
-        run: |
-          # https://stackoverflow.com/questions/70991268/how-to-sign-and-notarize-a-pkg-within-a-github-actions-macos-runner
-          bash scripts/sign-macos-pkg.sh "$DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY"
+        run: /usr/bin/codesign --deep --force -s "$DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY" --options runtime "PicGuard Pro.app" -v
+        working-directory: build/macos/Build/Products/Release-pro
         env:
           DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY }}
 
-      - name: Build pkg
+      - name: Notarize app
         run: |
-          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
-          xcrun pkgbuild --component "./PicGuard.app" --install-location /Applications --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" PicGuard-unsigned.pkg
-          mv PicGuard-unsigned.pkg "$GITHUB_WORKSPACE/PicGuard-unsigned.pkg"
-        env:
-          DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
-        working-directory: build/macos/Build/Products/Release-free
+          # We can't notarize an app bundle directly, but we need to compress it as an archive.
+          # Therefore, we create a zip file containing our app bundle, so that we can send it to the
+          # notarization service
+          echo "Creating temp notarization archive"
+          ditto -c -k --keepParent "PicGuard Pro.app" "PicGuard Pro.zip"
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: unsigned-pkg-artifact
-          path: ./PicGuard-unsigned.pkg
-
-      - name: Building distribution file
-        run: |
-          xcrun productbuild --synthesize --product macos/packaging/pkg/requirements --package PicGuard-unsigned.pkg distribution.dist
-          sed -i '' '2 a\
-          \    <title>PicGuard</title>\
-          \    <license file="eula.rtf"/>\
-          ' distribution.dist
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: distribution-artifact
-          path: ./distribution.dist
-
-      - name: Sign pkg
-        run: |
-          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
-          xcrun productbuild --distribution distribution.dist --resources macos/packaging/base --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" PicGuard.pkg
-        env:
-          DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: pkg-artifact
-          path: ./PicGuard.pkg
-
-#      - name: Check sign status
-#        run: |
-#          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
-#          pkgutil –-check-signature PicGuard.pkg
-
-      - name: Notarize & Staple
-        run: |
           # Here we send the notarization request to the Apple's Notarization service, waiting for the result.
           # This typically takes a few seconds inside a CI environment, but it might take more depending on the App
           # characteristics. Visit the Notarization docs for more information and strategies on how to optimize it if
           # you're curious
-          echo "Notarize pkg"
-          xcrun notarytool submit "PicGuard.pkg" --apple-id "$APPLE_ID" --password "$APPLE_PASSWORD" --team-id "$APPLE_TEAM_ID" --output-format "json" --wait
+          echo "Notarize app"
+          xcrun notarytool submit "PicGuard Pro.zip" --apple-id "$APPLE_ID" --team-id "$APPLE_TEAM_ID" --password "$APPLE_PASSWORD" --wait
 
           # Finally, we need to "attach the staple" to our executable, which will allow our app to be
           # validated by macOS even when an internet connection is not available.
           echo "Attach staple"
-          xcrun stapler staple "PicGuard.pkg"
+          xcrun stapler staple "PicGuard Pro.app"
+        working-directory: build/macos/Build/Products/Release-pro
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+
+      - name: Build DMG
+        run: bash scripts/build-dmg-pro.sh
 
       - name: Set version
         id: version_step
@@ -159,20 +121,19 @@ jobs:
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
 
       # Package the build.
-      - name: Copy build for pkg
+      - name: Copy build for dmg
         run: |
           echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
-          ls -la *.pkg
-          test -f PicGuard-unsigned.pkg && rm -f PicGuard-unsigned.pkg
-          mv PicGuard.pkg PicGuard-"$VERSION_SHORT.$BUILD_NUMBER"-macos-universal.pkg
+          ls -la *.dmg
+          mv "PicGuard Pro.dmg" PicGuard-Pro-"$VERSION_SHORT.$BUILD_NUMBER"-macos-universal.dmg
         env:
           VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
           BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: stapled-pkg-artifact
-          path: ./*.pkg
+          name: macos-dmg-pro-artifact
+          path: ./*.dmg
 
       - name: Clean up
         if: ${{ always() }}
