--- a/.github/workflows/test-macos-pkg-appstore-pro.yml
+++ b/.github/workflows/test-macos-pkg-appstore-pro.yml
@@ -1,4 +1,4 @@
-name: Test macOS pkg (appstore)
+name: Test macOS pkg (pro appstore)
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ permissions: read-all
 
 jobs:
   pkg-appstore:
-    name: Create pkg appstore (free)
+    name: Create pkg
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
       - name: Build macOS
         run: |
           echo "╠ Releasing to mac app store..."
-          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart --flavor free
+          flutter build macos --dart-define-from-file=.env --target lib/main_pro.dart --flavor pro
 
       - name: Install certificates
         run: |
@@ -52,13 +52,13 @@ jobs:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_installer_certificate.p12
           # Mac App Distribution
           THIRD_PARTY_MAC_DEVELOPER_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_application_certificate.p12
-          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH=$RUNNER_TEMP/picguard_mac_appstore.provisionprofile
+          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH=$RUNNER_TEMP/picguard_pro_mac_appstore.provisionprofile
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
           echo -n "$THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC" | base64 --decode --output $THIRD_PARTY_MAC_DEVELOPER_INSTALLER_CERTIFICATE_PATH
           echo -n "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_P12_BASE64_MAC" | base64 --decode --output $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_CERTIFICATE_PATH
-          echo -n "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC" | base64 --decode --output $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH
+          echo -n "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC_PRO" | base64 --decode --output $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
@@ -73,12 +73,12 @@ jobs:
           
           # apply provisioning profile
           # https://developer.apple.com/documentation/bundleresources/placing_content_in_a_bundle/
-          # security cms -D -i picguard_mac_appstore.provisionprofile
-          mv $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH build/macos/Build/Products/Release-free/PicGuard.app/Contents/embedded.provisionprofile
+          # security cms -D -i picguard_pro_mac_appstore.provisionprofile
+          mv $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH "build/macos/Build/Products/Release-pro/PicGuard Pro.app/Contents/embedded.provisionprofile"
         env:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC }}
           THIRD_PARTY_MAC_DEVELOPER_APPLICATION_P12_BASE64_MAC: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_APPLICATION_P12_BASE64_MAC }}
-          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC }}
+          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC_PRO: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PROVISION_PROFILE_BASE64_MAC_PRO }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
@@ -87,20 +87,20 @@ jobs:
           # https://stackoverflow.com/questions/70991268/how-to-sign-and-notarize-a-pkg-within-a-github-actions-macos-runner
           # https://developer.apple.com/forums/thread/733942
           # https://stackoverflow.com/questions/60384835/dyld-library-not-loaded-code-signature-invalid
-          # codesign -dvvv PicGuard.app
+          # codesign -dvvv "PicGuard Pro.app"
           # https://lessons.livecode.com/a/876834-signing-and-uploading-apps-to-the-mac-app-store
           
           # 1. Code sign executables
           echo "Code sign executables"
-          /usr/bin/codesign --deep --force --sign "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY" build/macos/Build/Products/Release-free/PicGuard.app
+          /usr/bin/codesign --deep --force --sign "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY" "build/macos/Build/Products/Release-pro/PicGuard Pro.app"
           
           # 2. Code sign entitlements.plist
           echo "Code sign entitlements.plist"
-          /usr/bin/codesign --force --sign "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY" --entitlements macos/Runner/AppStore-Release.entitlements build/macos/Build/Products/Release-free/PicGuard.app
+          /usr/bin/codesign --force --sign "$THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY" --entitlements macos/Runner/AppStore-Release.entitlements "build/macos/Build/Products/Release-pro/PicGuard Pro.app"
           
           # 3. Just to confirm all is well, verify the code signing
           # No response means that there were no errors and it is code signed.
-          # /usr/bin/codesign --verify build/macos/Build/Products/Release-free/PicGuard.app
+          # /usr/bin/codesign --verify "build/macos/Build/Products/Release-pro/PicGuard Pro.app"
         env:
           THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_APPLICATION_SIGNING_IDENTITY }}
 
@@ -111,10 +111,10 @@ jobs:
           # It will go through the installation process to confirm that the installer package is OK.
           # NOTE: If the app is signed for distribution to the Mac App Store the resulting app will not run locally.
           # sudo installer -store -package <path_to_app_pkg_file> -target /
-          xcrun productbuild --sign "$THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY" --component PicGuard.app /Applications PicGuard.pkg
+          xcrun productbuild --sign "$THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY" --component "PicGuard Pro.app" /Applications "PicGuard Pro.pkg"
         env:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_SIGNING_IDENTITY }}
-        working-directory: build/macos/Build/Products/Release-free
+        working-directory: build/macos/Build/Products/Release-pro
 
       - name: Set version
         id: version_step
@@ -137,15 +137,15 @@ jobs:
         run: |
           echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
           ls -la *.pkg
-          mv PicGuard.pkg $GITHUB_WORKSPACE/PicGuard-"$VERSION_SHORT.$BUILD_NUMBER"-macos-appstore-universal.pkg
-        working-directory: build/macos/Build/Products/Release-free
+          mv "PicGuard Pro.pkg" $GITHUB_WORKSPACE/PicGuard-Pro-"$VERSION_SHORT.$BUILD_NUMBER"-macos-appstore-universal.pkg
+        working-directory: build/macos/Build/Products/Release-pro
         env:
           VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
           BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: macos-pkg-appstore-artifact
+          name: macos-pkg-pro-appstore-artifact
           path: ./*.pkg
 
       - name: Clean up
