--- a/.github/workflows/test-macos-pkg-pro.yml
+++ b/.github/workflows/test-macos-pkg-pro.yml
@@ -1,4 +1,4 @@
-name: Test macOS tar
+name: Test macOS pkg (pro)
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ on:
 permissions: read-all
 
 jobs:
-  macos-tar:
-    name: Create macos tar (free)
+  pkg:
+    name: Create pkg
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -43,58 +43,99 @@ jobs:
       - name: Build macOS
         run: |
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart --flavor free
+          flutter build macos --dart-define-from-file=.env --target lib/main_pro.dart --flavor pro
 
       - name: Install certificates
-        env:
-          DEVELOPER_ID_APPLICATION_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_APPLICATION_P12_BASE64_MAC }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
+          DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_installer_certificate.p12
           DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_developerID_application_certificate.p12
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
+          echo -n "$DEVELOPER_ID_INSTALLER_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH
           echo -n "$DEVELOPER_ID_APPLICATION_P12_BASE64_MAC" | base64 --decode --output $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          # security default-keychain -s $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
           # import certificate to keychain
+          security import $DEVELOPER_ID_INSTALLER_CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security import $DEVELOPER_ID_APPLICATION_CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
-          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+        env:
+          DEVELOPER_ID_INSTALLER_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_INSTALLER_P12_BASE64_MAC }}
+          DEVELOPER_ID_APPLICATION_P12_BASE64_MAC: ${{ secrets.DEVELOPER_ID_APPLICATION_P12_BASE64_MAC }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
       - name: Code Signing
-        run: /usr/bin/codesign --deep --force -s "$DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY" --options runtime PicGuard.app -v
-        working-directory: build/macos/Build/Products/Release-free
+        run: |
+          # https://stackoverflow.com/questions/70991268/how-to-sign-and-notarize-a-pkg-within-a-github-actions-macos-runner
+          bash scripts/sign-macos-pkg.sh "$DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY"
         env:
           DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY }}
 
-      - name: Notarize app
+      - name: Build pkg
         run: |
-          # We can't notarize an app bundle directly, but we need to compress it as an archive.
-          # Therefore, we create a zip file containing our app bundle, so that we can send it to the
-          # notarization service
-          echo "Creating temp notarization archive"
-          ditto -c -k --keepParent "PicGuard.app" "PicGuard.zip"
+          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
+          xcrun pkgbuild --component "./PicGuard Pro.app" --install-location /Applications --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" "PicGuard Pro-unsigned.pkg"
+          mv "PicGuard Pro-unsigned.pkg" "$GITHUB_WORKSPACE/PicGuard Pro-unsigned.pkg"
+        env:
+          DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
+        working-directory: build/macos/Build/Products/Release-pro
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: unsigned-pkg-pro-artifact
+          path: ./PicGuard\ Pro-unsigned.pkg
+
+      - name: Building distribution file
+        run: |
+          xcrun productbuild --synthesize --product macos/packaging/pkg/requirements --package "PicGuard Pro-unsigned.pkg" distribution.dist
+          sed -i '' '2 a\
+          \    <title>PicGuard Pro</title>\
+          \    <license file="eula-pro.rtf"/>\
+          ' distribution.dist
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: distribution-pro-artifact
+          path: ./distribution.dist
+
+      - name: Sign pkg
+        run: |
+          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
+          xcrun productbuild --distribution distribution.dist --resources macos/packaging/base --sign "$DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY" "PicGuard Pro.pkg"
+        env:
+          DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY: ${{ secrets.DEVELOPER_ID_INSTALLER_SIGNING_IDENTITY }}
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: pkg-pro-artifact
+          path: ./PicGuard\ Pro.pkg
+
+#      - name: Check sign status
+#        run: |
+#          # https://www.hexnode.com/mobile-device-management/help/how-to-sign-macos-pkg-files-for-deployment-with-hexnode-mdm/
+#          pkgutil –-check-signature "PicGuard Pro.pkg"
+
+      - name: Notarize & Staple
+        run: |
           # Here we send the notarization request to the Apple's Notarization service, waiting for the result.
           # This typically takes a few seconds inside a CI environment, but it might take more depending on the App
           # characteristics. Visit the Notarization docs for more information and strategies on how to optimize it if
           # you're curious
-          echo "Notarize app"
-          xcrun notarytool submit "PicGuard.zip" --apple-id "$APPLE_ID" --team-id "$APPLE_TEAM_ID" --password "$APPLE_PASSWORD" --wait
+          echo "Notarize pkg"
+          xcrun notarytool submit "PicGuard Pro.pkg" --apple-id "$APPLE_ID" --password "$APPLE_PASSWORD" --team-id "$APPLE_TEAM_ID" --output-format "json" --wait
 
           # Finally, we need to "attach the staple" to our executable, which will allow our app to be
           # validated by macOS even when an internet connection is not available.
           echo "Attach staple"
-          xcrun stapler staple "PicGuard.app"
-        working-directory: build/macos/Build/Products/Release-free
+          xcrun stapler staple "PicGuard Pro.pkg"
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -117,27 +158,21 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
 
-      - name: Build tar
+      # Package the build.
+      - name: Copy build for pkg
         run: |
           echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
-          tar -czaf PicGuard-"$VERSION_SHORT.$BUILD_NUMBER"-macos-universal.tar.gz ./PicGuard.app
-        working-directory: build/macos/Build/Products/Release-free
+          ls -la *.pkg
+          test -f "PicGuard Pro-unsigned.pkg" && rm -f "PicGuard Pro-unsigned.pkg"
+          mv "PicGuard Pro.pkg" PicGuard-Pro-"$VERSION_SHORT.$BUILD_NUMBER"-macos-universal.pkg
         env:
           VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
           BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
 
-      # Package the build.
-      - name: Copy build for tar
-        run: |
-          ls -la *.tar.gz
-          test -f PicGuard.zip && rm -f PicGuard.zip
-          mv *.tar.gz $GITHUB_WORKSPACE/
-        working-directory: build/macos/Build/Products/Release-free
-
       - uses: actions/upload-artifact@v4
         with:
-          name: macos-tar-artifact
-          path: ./*.tar.gz
+          name: stapled-pkg-pro-artifact
+          path: ./*.pkg
 
       - name: Clean up
         if: ${{ always() }}
