--- a/.github/workflows/test-windows-msi-free-arm64.yml
+++ b/.github/workflows/test-windows-msi-free-arm64.yml
@@ -38,6 +38,7 @@ jobs:
     runs-on: windows-11-arm
     env:
       Platform: arm64
+      Configuration: Release
     needs:
       - get-version
     steps:
@@ -70,9 +71,7 @@ jobs:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
 
       - name: copy eula.rtf to the windows folder
-        run: |
-          Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
-          Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\msi\picguard\picguard\License.rtf" -Force
+        run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Get SignTool path
         run: Get-Command signtool.exe
@@ -116,10 +115,10 @@ jobs:
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
           $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
-          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration Release
+          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\Release\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
@@ -129,8 +128,8 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-zh-CN.msi"
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\en-US\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\zh-CN\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-zh-CN.msi"
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
@@ -138,7 +137,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-msi-artifact
-          path: .\msi\picguard\picguard\bin\${{ env.Platform }}\Release\*\*.msi
+          path: .\msi\picguard\picguard\bin\${{ env.Platform }}\${{ env.Configuration }}\*\*.msi
 
       - name: Clean up
         if: ${{ always() }}
