--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,12 @@ dependencies:
   bot_toast: ^4.1.3
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.4.0
-  file_picker: ^10.1.7
+  file_picker: ^10.1.9
   file_saver: ^0.2.14
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
-  flutter_expandable_fab: ^2.5.0
+  flutter_expandable_fab: ^2.5.1
   flutter_form_builder: ^10.0.1
   flutter_gen: ^5.10.0
   flutter_localizations:
@@ -92,7 +92,7 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
+  # included with your application so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
@@ -103,7 +103,6 @@ flutter:
    - CHANGELOG.md
    - LICENSE
    - README.md
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
