feat(msi): add license dialog

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3952,6 +3952,7 @@ jobs:
     runs-on: windows-2022
     env:
       Platform: x64
+      Configuration: Release
     needs:
       - create-release
     steps:
@@ -3975,7 +3976,7 @@ jobs:
       - name: Install wix toolset
         shell: pwsh
         run: |
-          dotnet tool install --global wix
+          dotnet tool install --global wix --version 4.0.5
           wix --version
 
       - name: Configure .env
@@ -4032,10 +4033,11 @@ jobs:
 
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
-          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration Release
+          $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
+          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\Release\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
@@ -4045,10 +4047,10 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\en-US\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\Release\zh-CN\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
-          ls -R ".\msi\picguard\picguard\bin\$env:Platform\Release"
-          cp ".\msi\picguard\picguard\bin\$env:Platform\Release\*\*.msi" "$env:GITHUB_WORKSPACE\"
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\en-US\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\zh-CN\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
+          ls -R ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration"
+          cp ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
         env:
           RELEASE: ${{ needs.create-release.outputs.release }}
 
@@ -4081,6 +4083,7 @@ jobs:
     runs-on: windows-2022
     env:
       Platform: x64
+      Configuration: Release
     needs:
       - create-release
     steps:
@@ -4104,7 +4107,7 @@ jobs:
       - name: Install wix toolset
         shell: pwsh
         run: |
-          dotnet tool install --global wix
+          dotnet tool install --global wix --version 4.0.5
           wix --version
 
       - name: Configure .env
@@ -4163,10 +4166,11 @@ jobs:
 
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
-          dotnet build .\msi\picguard\picguard-pro\picguard-pro.wixproj --arch "$env:Platform" --configuration Release
+          $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
+          dotnet build .\msi\picguard\picguard-pro\picguard-pro.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\msi\picguard\picguard-pro\bin\$env:Platform\Release\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
           WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
           WINDOWS_CERTIFICATE_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PRO }}
@@ -4176,10 +4180,10 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\Release\en-US\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\Release\zh-CN\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
-          ls -R ".\msi\picguard\picguard-pro\bin\$env:Platform\Release"
-          cp ".\msi\picguard\picguard-pro\bin\$env:Platform\Release\*\*.msi" "$env:GITHUB_WORKSPACE\"
+          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\en-US\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\zh-CN\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
+          ls -R ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration"
+          cp ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
         env:
           RELEASE: ${{ needs.create-release.outputs.release }}
 
