refactor: update wix project

--- a/.github/workflows/test-windows-msi-free.yml
+++ b/.github/workflows/test-windows-msi-free.yml
@@ -81,23 +81,8 @@ jobs:
       - name: Build windows
         run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
-      - name: Update msi version
-        shell: pwsh
-        run: |
-          # 文件路径
-          $filePath = "msi\picguard\picguard\Package.wxs"
-
-          # 读取文件内容
-          $content = Get-Content -Path $filePath -Raw
-
-          # 替换使用正则表达式
-          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION_SHORT.$env:BUILD_NUMBER"
-
-          # 写回文件
-          Set-Content -Path $filePath -Value $newContent -NoNewline
-        env:
-          VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
-          BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
 
       - name: Create msi
         shell: pwsh
@@ -111,11 +96,18 @@ jobs:
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
           $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
-          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
+          
+          pushd ./msi
+
+          python preprocess.py --arp -d ../build/windows/$env:Platform/runner/Release -i ../windows/runner/resources/app_icon.ico -v "$env:VERSION_SHORT.$env:BUILD_NUMBER"
+          nuget restore picguard.sln
+          msbuild picguard.sln -p:Configuration="$env:Configuration" -p:Platform="$env:Platform" /p:TargetVersion=Windows10
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
+          VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
@@ -124,8 +116,8 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\en-US\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\zh-CN\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-zh-CN.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\$env:Configuration\en-us\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\$env:Configuration\zh-cn\picguard.msi" -NewName "picguard-$env:VERSION_SHORT.$env:BUILD_NUMBER-windows-$env:Platform-zh-CN.msi"
         env:
           VERSION_SHORT: ${{ needs.get-version.outputs.version_short }}
           BUILD_NUMBER: ${{ needs.get-version.outputs.build_number }}
@@ -133,7 +125,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: windows-msi-artifact
-          path: .\msi\picguard\picguard\bin\${{ env.Platform }}\${{ env.Configuration }}\*\*.msi
+          path: .\msi\picguard\bin\${{ env.Platform }}\${{ env.Configuration }}\*\*.msi
 
       - name: Clean up
         if: ${{ always() }}
