--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4004,23 +4004,8 @@ jobs:
       - name: Build windows
         run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
-      - name: Update msi version
-        shell: pwsh
-        run: |
-          # 文件路径
-          $filePath = "msi\picguard\picguard\Package.wxs"
-
-          # 读取文件内容
-          $content = Get-Content -Path $filePath -Raw
-
-          # 替换使用正则表达式
-          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION_SHORT.$env:BUILD_NUMBER"
-
-          # 写回文件
-          Set-Content -Path $filePath -Value $newContent -NoNewline
-        env:
-          VERSION_SHORT: ${{ needs.create-release.outputs.version_short }}
-          BUILD_NUMBER: ${{ needs.create-release.outputs.build_number }}
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
 
       - name: Create msi
         shell: pwsh
@@ -4034,11 +4019,18 @@ jobs:
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
           $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
-          dotnet build .\msi\picguard\picguard\picguard.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
+          
+          pushd ./msi
+
+          python preprocess.py --arp -d ../build/windows/$env:Platform/runner/Release -i ../windows/runner/resources/app_icon.ico -v "$env:VERSION_SHORT.$env:BUILD_NUMBER"
+          nuget restore picguard.sln
+          msbuild picguard.sln -p:Configuration="$env:Configuration" -p:Platform="$env:Platform" /p:TargetVersion=Windows10
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD" /n "$env:WINDOWS_PUBLISHER_NAME" (get-item ".\picguard\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
+          VERSION_SHORT: ${{ needs.create-release.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.create-release.outputs.build_number }}
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
@@ -4047,10 +4039,10 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\en-US\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\zh-CN\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
-          ls -R ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration"
-          cp ".\msi\picguard\picguard\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\$env:Configuration\en-us\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\$env:Platform\$env:Configuration\zh-cn\picguard.msi" -NewName "picguard-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
+          ls -R ".\msi\picguard\bin\$env:Platform\$env:Configuration"
+          cp ".\msi\picguard\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
         env:
           RELEASE: ${{ needs.create-release.outputs.release }}
 
@@ -4137,23 +4129,8 @@ jobs:
       - name: Build windows
         run: flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
 
-      - name: Update msi version
-        shell: pwsh
-        run: |
-          # 文件路径
-          $filePath = "msi\picguard\picguard-pro\Package.wxs"
-
-          # 读取文件内容
-          $content = Get-Content -Path $filePath -Raw
-
-          # 替换使用正则表达式
-          $newContent = $content -replace "\b\d{1,4}\.\d{1,4}\.\d{1,4}\.\d{1,4}\b", "$env:VERSION_SHORT.$env:BUILD_NUMBER"
-
-          # 写回文件
-          Set-Content -Path $filePath -Value $newContent -NoNewline
-        env:
-          VERSION_SHORT: ${{ needs.create-release.outputs.version_short }}
-          BUILD_NUMBER: ${{ needs.create-release.outputs.build_number }}
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v2
 
       - name: Create msi
         shell: pwsh
@@ -4167,11 +4144,18 @@ jobs:
           $env:IconPath = "$pwd\windows\runner\resources\app_icon.ico"
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\$env:Platform\runner\Release"
           $env:LicensePath = "$env:FLUTTER_BUILD_OUTPUT_DIR\LICENSE.rtf"
-          dotnet build .\msi\picguard\picguard-pro\picguard-pro.wixproj --arch "$env:Platform" --configuration "$env:Configuration"
+          
+          pushd ./msi
+
+          python preprocess-pro.py --arp -d ../build/windows/$env:Platform/runner/Release -i ../windows/runner/resources/app_icon.ico -v "$env:VERSION_SHORT.$env:BUILD_NUMBER"
+          nuget restore picguard-pro.sln
+          msbuild picguard-pro.sln -p:Configuration="$env:Configuration" -p:Platform="$env:Platform" /p:TargetVersion=Windows10
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
-          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi")
+          & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi")
         env:
+          VERSION_SHORT: ${{ needs.create-release.outputs.version_short }}
+          BUILD_NUMBER: ${{ needs.create-release.outputs.build_number }}
           WINDOWS_PUBLISHER_NAME_PRO: ${{ secrets.WINDOWS_PUBLISHER_NAME_PRO }}
           WINDOWS_CERTIFICATE_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PRO }}
           WINDOWS_CERTIFICATE_PASSWORD_PRO: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD_PRO }}
@@ -4180,10 +4164,10 @@ jobs:
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\en-US\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-en-US.msi"
-          Rename-Item -Path "$pwd\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\zh-CN\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
-          ls -R ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration"
-          cp ".\msi\picguard\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
+          Rename-Item -Path "$pwd\msi\picguard-pro\bin\$env:Platform\$env:Configuration\en-us\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard-pro\bin\$env:Platform\$env:Configuration\zh-cn\picguard-pro.msi" -NewName "picguard-pro-$env:RELEASE-windows-$env:Platform-zh-CN.msi"
+          ls -R ".\msi\picguard-pro\bin\$env:Platform\$env:Configuration"
+          cp ".\msi\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi" "$env:GITHUB_WORKSPACE\"
         env:
           RELEASE: ${{ needs.create-release.outputs.release }}
 
