--- a/.github/workflows/test-windows-zip-free.yml
+++ b/.github/workflows/test-windows-zip-free.yml
@@ -44,7 +44,7 @@ jobs:
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
             --targets zip `
-            --artifact-name "{{name}}-{{build_name}}.{{build_number}}-{{platform}}-$env:Platform.{{ext}}"
+            --artifact-name "{{name}}-{{build_name}}.{{build_number}}-{{platform}}-portable-$env:Platform.{{ext}}"
 
       - uses: actions/upload-artifact@v4
         with:
